@startuml
left to right direction
entity CambioEstado <<entity>>{
fechaHoraInicio
estado:Estado

new()
esEstadoInicial()
getFechaHoraInicio()
getNombreEstado()
esUltimoCambioEstado()
obtenerEstadoActual()
}

entity Estado <<entity>>{
nombre

new()
esFinalizada()
esIniciada()
getNombre()
}
interface IAgregado{
    + crearIterador(elementos:Object[]):IIterador
}

interface IIterador{
    + primero():void
    + siguiente():void
    + haTerminado():boolean
    + elementoActual():Object
    + cumpleFiltro(filtros:Object[]):boolean
}
class IteradorLlamadas<<iterator>>{
  - actual:Object
  - elementos: Object[]

  + primero():void
  + siguiente():void
  + haTerminado():boolean
  + elementoActual():Object
  + new(elem:Llamada[]):void
  + cumpleFiltro(filtros:Object[]):boolean
}

class IteradorCambioEstado<<iterator>>{
  - actual:Object
  - elementos: Object[]

  + primero():void
  + siguiente():void
  + haTerminado():boolean
  + elementoActual():Object
  + new(elem:CambioEstado[]):void
  + cumpleFiltro(filtros:Object[]):boolean
}


entity Llamada <<entity>> {
descripcionOperador
detalleAccionRequerida
duracion
encuestaEnviada
observacionAuditor
respuestasDeEncuesta:RespuestaDeCliente
cambioEstado:CambioEstado
cliente:Cliente

new()
agregarCambioEstado()
agregarRespuestaDeEncuesta()
determinarEstadoInicial()
esDePeriodo()
tieneEncuestaRespondida()
getDuracion()
getNombreClienteLlamada()
determinarUltimoEstado()
getRespuestas()
mostrarDatosLlamada()
crearIterador():IIterador
}



abstract ControlConsultarEncuesta<<Control>>{
fechaHoraInicio
fechaHoraFin
llamadaSeleccionada
llamdasEnPeriodoRespondidas
formatoSeleccionado
datosLlamada

crearIterador(elementos:Llamada[],filtros:Object[]):IIterador
consultarEncuesta()
tomarSeleccionFechaInicio()
tomarSeleccionFechaFin()
buscarLlamadasRespondidas()
tomarSeleccionLlamada()
agregarLlamadaEnPerido()
obtenerDatosLlamada()
getDatosLlamada()
tomarSeleccionFormato()
generarInformeCSV()
cancelarOperacion()
generarImpresion()
finCU()
}
CambioEstado-->"1"Estado
IteradorLlamadas ..> Llamada
IteradorCambioEstado ..> CambioEstado
Llamada -->"1..*"CambioEstado



IteradorLlamadas ..|> IIterador
IteradorCambioEstado ..|> IIterador
ControlConsultarEncuesta ..|> IAgregado
Llamada ..|> IAgregado
ControlConsultarEncuesta ..> IteradorLlamadas
Llamada ..> IteradorCambioEstado

ControlConsultarEncuesta ..> Llamada



@enduml
